# agent-zero

./: .pre-commit-config.yaml  agent.py  docker-compose.dev.yml  initialize.py  jsconfig.json  models.py  preload.py  pyproject.toml  run_cli.py  run_tunnel.py  run_ui.py
docker/: dev.Dockerfile
docker/base/: build.txt
docker/run/: build.txt  docker-compose.cuda.yml  docker-compose.yml
docs/: README.md  architecture.md  contribution.md  installation.md  mcp_setup.md  quickstart.md  troubleshooting.md  tunnel.md  usage.md
lib/browser/: click.js
prompts/default/: agent.system.behaviour_default.md  agent.system.main.communication.md  agent.system.main.environment.md  agent.system.tool.call_sub.md  agent.system.tool.code_exe.md  agent.system.tool.input.md  agent.system.tool.knowledge.md  agent.system.tool.memory.md  agent.system.tool.response.md  agent.system.tool.search_engine.md  agent.system.tool.web.md  agent.system.tools_vision.md  fw.code.info.md  fw.msg_timeout.md  msg.memory_cleanup.md
python/api/: chat_reset.py  download_work_dir_file.py  get_work_dir_files.py  history_get.py  image_get.py  import_knowledge.py  mcp_server_get_detail.py  mcp_server_get_log.py  mcp_servers_apply.py  mcp_servers_status.py  message.py  message_async.py  poll.py  scheduler_task_create.py  scheduler_task_run.py  scheduler_task_update.py  scheduler_tick.py  transcribe.py  tunnel.py  tunnel_proxy.py  upload_work_dir_files.py
python/helpers/: api.py  attachment_manager.py  browser.py  cloudflare_tunnel._py  defer.py  docker.py  errors.py  file_browser.py  files.py  git.py  history.py  (+21 more)
(+47 files in other folders)
