[tool.poetry]
name = "agent_zero"
version = "0.1.0"
description = "Agent Zero"
authors = ["Agent Zero"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "*"
pydantic = ">=2"
rich = "*"
"uvicorn[standard]" = "*"

[tool.poetry.group.dev.dependencies]
black = "==24.*"
ruff = "==0.4.*"
mypy = "==1.*"
pytest = "*"
pytest-asyncio = "*"
"coverage[toml]" = "*"

[build-system]
requires = ["poetry-core>=1.8,<1.9"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
extend-select = ["B", "SIM"]

[tool.mypy]
strict = true
