[tool.poetry]
name = "agent_zero"
version = "0.1.0"
description = "Agent Zero"
authors = ["Agent Zero"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.110.0"
pydantic = "^2.7.0"
rich = "^13.7.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
black = "24.*"
ruff = "0.4.*"
mypy = "1.*"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
coverage = { version = "^7.5", extras = ["toml"] }
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.8,<1.9"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["E", "F"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
